Resolve fullscreen modal dropdown overlap issue

--- a/src/components/FullScreenDataTable/FullScreenDataTable.scss
+++ b/src/components/FullScreenDataTable/FullScreenDataTable.scss
@@ -29,13 +29,11 @@ dialog.dkan-full-screen-dataset-dialog {
     .ds-c-dialog__body {
       width: 100%;
       height: 100%;
-      overflow: hidden;
 
       > div[id^="dialog"][id$="__content"] {
         display: flex;
         flex-direction: column;
         height: 100%;
-        overflow: hidden;
 
         .dkan-datatable-fullscreen-mode {
           height: 100%;
